...

    // AddInstructionStepScreen
    const val HORIZONTAL_PADDING = 16
    const val CONTAINER_PADDING = 16
    const val SPACE_BETWEEN_ELEMENTS = 16
    const val INSTRUCTION_VERTICAL_PADDING = 8
    const val SAVE_BUTTON_TAG = "saveButton"
    const val MAXLINES_TIME_FIELD = 1
    const val MINLINES_VISIBLE_FOR_INSTRUCTION = 10
    const val MAXLINES_VISIBLE_FOR_INSTRUCTION = 10
    const val TIME_CHARACTER_LIMIT = 4

    // IconDropdownMenu
...
    object CameraPreview {
      const val PREVIEW = "camera_preview"
    }

    object Utils {
      // PLATE SWIPE SCAFFOLD
      const val SEARCH_BAR = "searchBar"
      const val TOP_BAR = "topBar"
      const val TOP_BAR_TITLE = "topBarTitle"
      const val BACK_ARROW_ICON = "backArrowIcon"
      const val EDIT_ACCOUNT_ICON = "editAccountIcon"
      const val PLATESWIPE_SCAFFOLD = "plateSwipeScaffold"
      const val CHEF_HAT_ICON = "chefHatIcon"
      const val BOTTOM_BAR = "bottomNavigationMenu"
      const val TEST_TAG = "TagTestTag"
    }

    object SwipePage {
      const val FILTER = "filter"
      const val FILTER_ROW = "filterRow"
      const val TIME_RANGE_CHIP = "timeRangeChip"
      const val DIFFICULTY_CHIP = "difficultyChip"
      const val CATEGORY_CHIP = "categoryChip"
      const val RECIPE_IMAGE_1 = "recipeImage1"
      const val RECIPE_IMAGE_2 = "recipeImage2"
      const val DRAGGABLE_ITEM = "draggableItem"
      const val RECIPE_NAME = "recipeName"
      const val RECIPE_FRIDGE_INGREDIENTS = "recipeFridgeIngredients"
      const val RECIPE_FRIDGE_INGREDIENTS_TEXT = "recipeFridgeIngredientsText"
      const val VIEW_RECIPE_BUTTON = "viewRecipeButton"
      const val DELETE_SUFFIX = "Delete"
    }

    object RecipeOverview {
      const val DRAGGABLE_ITEM = "draggableItem"
      const val RECIPE_IMAGE = "recipeImage"
      const val RECIPE_TITLE = "recipeTitle"
      const val RECIPE_FRIDGE_INGREDIENTS = "recipeFridgeIngredients"
      const val RECIPE_FRIDGE_INGREDIENTS_TEXT = "recipeFridgeIngredientsText"
      const val INGREDIENTS_VIEW = "ingredientsView"
      const val INSTRUCTIONS_VIEW = "instructionsView"
      const val INGREDIENT_CHECKBOX = "checkboxIngredient"
      const val INGREDIENT_PREFIX = "ingredient"
...
      const val COOK_TIME_TEXT = "cookTimeText"
      const val TOTAL_TIME_TEXT = "totalTimeText"
    }

    object RecipeList {
      const val RECIPE_LIST_TEST_TAG = "recipeList"
      const val RECIPE_CARD_TEST_TAG = "recipeCard"
      const val RECIPE_PRICE_RATING_TEST_TAG = "priceRating"
      const val RECIPE_CATEGORIES_TEST_TAG = "recipeCategories"
      const val RECIPE_IMAGE_TEST_TAG = "recipeImage"
      const val RECIPE_TITLE_TEST_TAG = "recipeTitle"
      const val RECIPE_FAVORITE_ICON_TEST_TAG = "recipeFavoriteIcon"
      const val RECIPE_DOWNLOAD_ICON_TEST_TAG = "recipeDownloadIcon"
      const val RECIPE_DELETE_ICON_TEST_TAG = "recipeDeleteIcon"
      const val CONFIRMATION_POP_UP = "confirmationPopUp"
      const val CONFIRMATION_BUTTON = "confirmButton"
      const val CANCEL_BUTTON = "cancelButton"
    }

    object SignInScreen {
      const val TACO = "taco"
      const val SUSHI = "sushi"
      const val AVOCADO = "avocado"
...
      const val INSTRUCTION_TEXT_IN_CARD = "InstructionTextInCard"
      const val INSTRUCTION_TIME = "InstructionTime"
      const val EDIT_INSTRUCTION_ICON = "EditInstructionIcon"
      const val INSTRUCTION_TEXT = "InstructionsText"
      const val RECIPE_NAME_TEXT = "RecipeNameText"
      const val INSTRUCTION_LIST = "InstructionList"
      const val INSTRUCTION_LIST_ITEM = "InstructionListItem"
      const val NEXT_STEP_BUTTON = "NextStepButton"
      const val RECIPE_LIST_INSTRUCTIONS_SCREEN_SPACER1 = "RecipeListInstructionsScreenSpacer1"
      const val RECIPE_LIST_ITEM_THUMBNAIL = "InstructionThumbnail"
      const val RECIPE_LIST_INSTRUCTION_ICON = "InstructionIcon"
      const val ADD_INSTRUCTION_BUTTON = "AddInstructionButton"
      const val ADD_ICON_DESCRIPTION = "Add"
      const val EDIT_ICON_DESCRIPTION = "Edit"
      const val STEP_ICON_DESCRIPTION = "Step"
    }

    object RecipeAddImageScreen {
      const val BOX_IMAGE = "box for image"
      const val DISPLAY_IMAGE = "display_image"
      const val DISPLAY_IMAGE_DEFAULT = "display_image_default"
      const val ROW_BUTTON = "row for buttons"
      const val CAMERA_BUTTON = "camera button"
      const val GALLERY_BUTTON = "gallery button"
      const val BOX_NEXT_BUTTON = "box for next button"
      const val ROW_FOR_CHEF = "row for chef image"
      const val MAIN_COL = "main column"
      const val MAIN_BOX = "main box"
      const val COL_2 = "col 2"
      const val TITLE_COL = "title col"
...
    object ChefImage {
      const val CHEF_IMAGE = "Chef Image"
    }

    object IngredientSearchScreen {
      const val DRAGGABLE_ITEM = "DraggableItem"
      const val SCANNER_ICON = "scannerIcon"
      const val CONFIRMATION_POPUP = "confirmationPopUp"
      const val CONFIRMATION_BUTTON = "confirmButton"
      const val CANCEL_BUTTON = "cancelButton"
    }

    object IngredientListScreen {
      const val RECIPE_NAME = "recipeName"
      const val ADD_INGREDIENT_ICON = "addIngredientIcon"
      const val NEXT_STEP_BUTTON = "nextStepButton"
    }

    object FilterPage {
      const val TEST_TAG_TIME_RANGE_SLIDER = "timeRangeSlider"
      const val TEST_TAG_DIFFICULTY = "difficulty"
...
    object RecipeBuilder {
      const val OUT_OF_BOUNDS_MESSAGE = "Index out of bounds"
    }

    object AddInstructionStepScreen {
      const val INPUT_CONTAINER = "InputContainer"
      const val TIME_INPUT = "TimeInput"
      const val ICON_DROPDOWN = "IconDropdown"
      const val INSTRUCTION_INPUT = "InstructionInput"
      const val INSTRUCTION_ERROR = "InstructionError"
      const val DELETE_BUTTON = "DeleteButton"
    }

    object Category {
      const val DROPDOWN_CORNER_RADIUS = 8
      const val BUTTON_TEST_TAG = "NextStepButton"

      // Category
      const val CATEGORY_SUBTITLE = "CategorySubtitle"
      const val CATEGORY_DROPDOWN = "CategoryDropdown"

      // Difficulty
      const val DIFFICULTY_SUBTITLE = "DifficultySubtitle"
      const val DIFFICULTY_DROPDOWN = "DifficultyDropdown"
    }

    object TimePicker {
      const val TIME_PICKER_TITLE = "TimePickerTitle"
      const val TIME_PICKER_DESCRIPTION = "TimePickerDescription"
      const val HOUR_PICKER = "HourPicker"
      const val MINUTE_PICKER = "MinutePicker"
      const val NEXT_BUTTON = "NextButton"
      const val HOURS_LABEL = "HoursLabel"
      const val MINUTES_LABEL = "MinutesLabel"
    }

    object Fridge {
      const val RED = "red"
...
