...
      verticalArrangement = Arrangement.SpaceBetween) {
        Spacer(modifier = Modifier.weight(1f))
        // Display the done text
        Text(
            text = stringResource(R.string.done_text),
            style = Typography.titleLarge,
            modifier = Modifier.weight(2f).zIndex(1f).testTag("DoneText"),
            color = MaterialTheme.colorScheme.onPrimary)
        Spacer(modifier = Modifier.weight(8f))

        // Display the chef in egg image
        Image(
            painter = painterResource(id = R.drawable.chef_image_in_egg1),
            contentDescription = CHEF_IMAGE_DESCRIPTION,
            modifier =
                Modifier.weight(1f)
                    .fillMaxSize(1f)
                    .aspectRatio(CHEF_IN_EGG_ORIGINAL_RATIO)
                    .zIndex(-1f)
                    .testTag("ChefImage"))

        Spacer(modifier = Modifier.weight(6f))

        // Display the publish button

        PlateSwipeButton(
...
                    navigationActions.navigateTo(Screen.SWIPE)
                  },
                  onFailure = { exception ->
                    Toast.makeText(context, exception.message, Toast.LENGTH_SHORT).show()
                  })
            },
            modifier = Modifier.testTag("PublishButton"),
            text = stringResource(R.string.publish_recipe_button))

        Spacer(modifier = Modifier.weight(1f))
      }
}

