...
    <string name="counter_max">+</string>

    //RecipeOverview
    <string name="unable_loading"> Unable to load recipe</string>

    //RecipeNameScreen
    <string name="create_your_recipe">Create your recipe</string>
    <string name="create_recipe_description">Create a recipe that others can discover and enjoy. Start by giving your dish a name!</string>
    <string name="recipe_name_label">Name of the recipe</string>
    <string name="recipe_name_hint">Choose a catchy title that reflects your dish</string>
    <string name="recipe_name_error">Please enter a recipe name</string>
    <string name="next_step">Next Step</string>

...
    <string name="cancel_date_of_birth_pop_up">Cancel</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email</string>

    //Fridge
    <string name="fridge_title">Fridge</string>
    <string name="empty_fridge_title">Empty Fridge</string>
    <string name="empty_fridge_description">Your fridge is currently empty, click below to add ingredient</string>
    <string name="date_pattern">dd/MM/yyyy</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="expiration_date">Expiration Date:</string>
    <string name="pop_up_title_fridge">Add to fridge?</string>
...
