...
                          isEditing, R.string.edit_your_recipe, R.string.create_your_recipe),
                  style = Typography.displayLarge,
                  color = MaterialTheme.colorScheme.onPrimary,
                  modifier =
                      Modifier.fillMaxWidth()
                          .padding(horizontal = RECIPE_NAME_BASE_PADDING)
                          .testTag("RecipeTitle"),
                  textAlign = TextAlign.Center)

              Spacer(modifier = Modifier.weight(0.1f))

              // Display the description text
              Text(
...
                  shape = RoundedCornerShape(8.dp),
                  modifier =
                      Modifier.fillMaxWidth()
                          .padding(horizontal = RECIPE_NAME_BASE_PADDING)
                          .background(
                              lightCream, shape = RoundedCornerShape(CORNER_SHAPE_TEXT_FIELD.dp))
                          .testTag("recipeNameTextField"),
                  colors =
                      TextFieldDefaults.outlinedTextFieldColors(
                          unfocusedBorderColor = Color.Transparent,
                          focusedBorderColor = Color.Transparent,
                          cursorColor = MaterialTheme.colorScheme.onSecondary),
                  textStyle = MaterialTheme.typography.bodyMedium,
...
